# SortCut

./: .gitignore  README.md  pyproject.toml
src/sortcut/: __init__.py
src/sortcut/algorithms/: palindrome_algorithms.py
